Update 4.2 Secure Network Component.md

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -174,6 +174,16 @@ Twisted pair cables are the most commonly used type of cabling in Ethernet netwo
 
 Twisted pair cables are generally categorized by their ability to handle certain transmission speeds and distances. Categories such as Cat5, Cat5e, Cat6, and Cat6a refer to different grades of twisted pair cables, with higher-numbered categories offering faster speeds and longer distances.
 
+| Category | Max Length | Max Bandwidth | Key Points / Notes |
+|----------|------------|---------------|------------------|
+| Cat5     | 100 m      | 100 Mbps      | Obsolete for modern networks; supports Fast Ethernet. |
+| Cat5e    | 100 m      | 1 Gbps        | Enhanced version of Cat5; reduces crosstalk. |
+| Cat6     | 100 m      | 1 Gbps        | Can reach 10 Gbps for up to 55 m; better shielding than Cat5e. |
+| Cat6a    | 100 m      | 10 Gbps       | Augmented Cat6; supports full 10 Gbps at 100 m; improved insulation and reduced crosstalk. |
+| Cat7     | 100 m      | 10 Gbps       | Shielded; better for high-interference environments; not widely used for standard Ethernet. |
+| Cat8     | 30 m       | 25–40 Gbps    | Designed for data centers; high frequency; limited distance. |
+
+
 :bulb: Practical tips for effective ethernet cabling:
 - Label both ends of every Ethernet cable during installation to make future troubleshooting and maintenance easier.
 - Avoid running Ethernet cables parallel to power lines to reduce electromagnetic interference and maintain signal integrity.
@@ -194,6 +204,22 @@ When selecting and installing network cabling, there are several important facto
 - **Cost-Effectiveness**: While it’s important to choose the right type of cabling for performance, it’s also important to consider the budget. Higher-quality cables like Cat6a or fiber optics may offer faster speeds, but they are more expensive. It’s crucial to strike a balance between performance requirements and cost considerations based on the scale of the network and its intended use.
 
 - **Fiber Optic Cabling**: fiber optic cables are also a critical part of modern networking. Fiber optics use light instead of electrical signals to transmit data, offering much higher speeds and longer distances than copper cables. Fiber is especially important in backbone connections and for very high-speed networks. Fiber optic cabling is becoming more common in businesses and data centers, but it requires more specialized knowledge and equipment.
+
+The following table recaps the most important concepts about fiber-cables:
+
+| Concept                | Description |
+|------------------------|-------------|
+| Transmission Medium    | Uses light signals in glass or plastic fibers instead of electrical signals. |
+| Core                   | Central part where light travels; diameter varies by single-mode or multi-mode fiber. |
+| Cladding               | Surrounds the core; reflects light back using total internal reflection. |
+| Buffer / Coating       | Protective layer to prevent damage and moisture intrusion. |
+| Light Source           | LEDs or lasers generate light pulses carrying data. |
+| Receiver               | Converts incoming light pulses back into electrical signals. |
+| Single-mode Fiber (SMF)| Small core (~8–10 µm), ideal for long distances, high bandwidth. |
+| Multi-mode Fiber (MMF) | Larger core (~50–62.5 µm), suitable for short distances, cost-effective. |
+| Advantages             | High speed, low signal loss, EMI-resistant, secure. |
+| Disadvantages          | Higher cost, specialized installation and repair. |
+
 
 ### Open Questions ###
 
