Update 4.2 Secure Network Component.md

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -295,7 +295,7 @@ NAC systems are widely used in environments where multiple devices, users, and v
 
 Physical NAC solutions are typically deployed within the network infrastructure to control access to physical network resources, such as switches, routers, and firewalls. These solutions use hardware components and physical mechanisms to control who can connect to the network.
 
-One of the most common physical NAC methods is port-based access control, which works by enforcing policies on specific physical ports in the network. Switches and routers use port-based security to determine if a device can access the network. NAC systems can be configured to identify devices based on Media Access Control (MAC) addresses or by authenticating users through IEEE 802.1X authentication.
+One of the most common physical NAC methods is **port-based access control**, which works by enforcing policies on specific physical ports in the network. Switches and routers use port-based security to determine if a device can access the network. NAC systems can be configured to identify devices based on Media Access Control (MAC) addresses or by authenticating users through IEEE 802.1X authentication.
 
 - 802.1X Authentication: This is the most widely used port-based access control method, especially in enterprise environments. It ensures that only authorized devices are allowed to connect by requiring devices to authenticate themselves before they can access the network. The authentication process typically involves the use of credentials (username and password) or digital certificates.
 
@@ -320,26 +320,26 @@ In virtualized environments, such as those utilizing VMware, Hyper-V, or contain
 
 A typical NAC system has several key components that work together to enforce network access policies:
 
-1. Authentication Server: This server is responsible for verifying the identity of users or devices trying to connect to the network. It may use RADIUS (Remote Authentication Dial-In User Service) or TACACS+ (Terminal Access Controller Access Control System) to authenticate devices and users. Integration with other authentication systems such as LDAP or Active Directory is also common.
+1. **Authentication Server:** This server is responsible for verifying the identity of users or devices trying to connect to the network. It may use RADIUS (Remote Authentication Dial-In User Service) or TACACS+ (Terminal Access Controller Access Control System) to authenticate devices and users. Integration with other authentication systems such as LDAP or Active Directory is also common.
 
-2. Policy Engine: The policy engine is the core of the NAC system. It defines and enforces the security policies that determine who or what can access the network, and under what conditions. Policies can include factors such as the type of device, user roles, location, time of day, and device health status.
+2. **Policy Engine:** The policy engine is the core of the NAC system. It defines and enforces the security policies that determine who or what can access the network, and under what conditions. Policies can include factors such as the type of device, user roles, location, time of day, and device health status.
 
-3. Access Control Point (ACP): The ACP acts as the enforcement point for network access decisions. This could be a physical device, such as a network switch or router, or a virtual access control point in the case of cloud-based NAC solutions. The ACP checks each device against the policy engine's rules and grants or denies access accordingly.
+3. **Access Control Point (ACP):** The ACP acts as the enforcement point for network access decisions. This could be a physical device, such as a network switch or router, or a virtual access control point in the case of cloud-based NAC solutions. The ACP checks each device against the policy engine's rules and grants or denies access accordingly.
 
-4. Monitoring and Reporting Tools: NAC systems often include monitoring and reporting features to track network activity and alert administrators to any suspicious access attempts. Real-time monitoring of devices and users helps identify non-compliant devices, threats, or vulnerabilities on the network.
+4. **Monitoring and Reporting Tools:** NAC systems often include monitoring and reporting features to track network activity and alert administrators to any suspicious access attempts. Real-time monitoring of devices and users helps identify non-compliant devices, threats, or vulnerabilities on the network.
 
 
 The Benefits of a NAC System are:
 
-Enhanced Security: NAC systems help prevent unauthorized access to the network by enforcing strict access controls. This reduces the likelihood of malicious actors exploiting network vulnerabilities.
+- Enhanced Security: NAC systems help prevent unauthorized access to the network by enforcing strict access controls. This reduces the likelihood of malicious actors exploiting network vulnerabilities.
 
-Device Health Compliance: By checking the health of devices before granting access, NAC ensures that only devices with up-to-date antivirus software, firewalls, and other required security settings are allowed on the network.
+- Device Health Compliance: By checking the health of devices before granting access, NAC ensures that only devices with up-to-date antivirus software, firewalls, and other required security settings are allowed on the network.
 
-Reduced Risk of Data Breaches: NAC solutions minimize the attack surface by isolating non-compliant devices, thus preventing them from interacting with sensitive systems and data.
+- Reduced Risk of Data Breaches: NAC solutions minimize the attack surface by isolating non-compliant devices, thus preventing them from interacting with sensitive systems and data.
 
-Network Segmentation: NAC can enforce policies that segment the network into multiple security zones, allowing different users or devices to access only the portions of the network they need.
+- Network Segmentation: NAC can enforce policies that segment the network into multiple security zones, allowing different users or devices to access only the portions of the network they need.
 
-Visibility and Control: NAC provides administrators with visibility into which devices are connected to the network, helping to identify and respond to potential threats quickly
+- Visibility and Control: NAC provides administrators with visibility into which devices are connected to the network, helping to identify and respond to potential threats quickly
 
 ### Open Questions ###
 
