Update 4.2 Secure Network Component.md

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -429,7 +429,7 @@ Unlike traditional EPP solutions, **EDR** (Endpoint Detection and Response ) foc
 - **Threat Hunting**: Uses behavioral analysis and forensic tools to proactively search for hidden threats.
 - **Automated Response**: Can isolate compromised endpoints, remove malicious files, and alert security teams.
 
-XDR expands the capabilities of EDR by integrating data from multiple security layers, such as email, cloud, and network security. This helps security teams correlate threat signals and respond more effectively.
+**XDR** expands the capabilities of EDR by integrating data from multiple security layers, such as email, cloud, and network security. This helps security teams correlate threat signals and respond more effectively.
 
 Zero Trust assumes that no device or user should be automatically trusted, requiring continuous verification before granting access. Key Zero Trust strategies for endpoints include:
 - Least Privilege Access: Ensures users and applications have only the minimum necessary permissions.
