Update 7.07 Operate and maintain detection and preventative measures.md

--- a/DOMAIN7: Security Operations/7.07 Operate and maintain detection and preventative measures.md
+++ b/DOMAIN7: Security Operations/7.07 Operate and maintain detection and preventative measures.md
@@ -370,6 +370,24 @@ Deploying honeypots is not without challenges. They require careful segmentation
 
 Anti-malware software is a security solution designed to detect, prevent, and remove malicious software. This includes viruses, worms, Trojans, ransomware, spyware, adware, rootkits, and more. The term is often used interchangeably with “antivirus,” but modern anti-malware is broader, covering a range of threats that traditional antivirus tools were never built to handle.
 
+The following table table summarizes the most common forms of malware with their characteristics and key points:
+
+| Malware Type   | Characteristics                                                                 | Key Points / Notes                                                                 |
+|----------------|-------------------------------------------------------------------------------|-----------------------------------------------------------------------------------|
+| Virus          | Attaches to files or programs, spreads when infected files are executed       | Requires user action to propagate; can corrupt files or slow systems             |
+| Worm           | Self-replicating malware that spreads across networks without user action     | Exploits vulnerabilities; can cause network congestion and large-scale damage    |
+| Trojan         | Appears as legitimate software but hides malicious functionality              | Does not self-replicate; often used to steal data or create backdoors            |
+| Ransomware     | Encrypts files or locks systems, demanding payment for restoration            | Can target individuals or organizations; highly disruptive and financially damaging |
+| Spyware        | Secretly collects user information such as credentials or browsing habits     | Can be installed via downloads or bundled software; often used for surveillance |
+| Adware         | Displays unwanted advertisements, often bundled with free software           | Usually less harmful but intrusive; can track browsing for marketing purposes    |
+| Rootkit        | Hides malware presence and grants persistent access to system                 | Hard to detect; can compromise entire operating system                            |
+| Keylogger      | Records keystrokes to capture passwords and sensitive information             | Often used for credential theft; may be hardware or software-based               |
+| Botnet / Bot   | Compromised devices controlled remotely by an attacker                         | Can be used for DDoS attacks, spam campaigns, or cryptocurrency mining          |
+| Fileless Malware | Resides in memory, avoids writing files to disk                               | Hard to detect with traditional antivirus; uses legitimate system tools          |
+| Backdoor       | Provides unauthorized remote access to a system                                | Often installed via Trojans or exploits; allows attackers to bypass security     |
+| Exploit Kit    | Packages of scripts that exploit vulnerabilities to install malware           | Frequently targets browsers or plugins; often delivered via malicious websites   |
+
+
 Malware, by its nature, is sneaky. It can disguise itself as a harmless PDF or a useful tool. It can lie dormant, evading detection for months. And once it activates, it can steal credentials, encrypt files, or turn your infrastructure into a botnet node. This is why anti-malware systems must be proactive, adaptive, and multi-layered.
 
 You don’t protect an enterprise by simply installing a tool and walking away. Just like a physical security guard relies on cameras, locks, policies, and training — not just their eyes — your anti-malware defenses must combine:
