Update 5.5 Manage the identity and access provisioning lifecycle.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.5 Manage the identity and access provisioning lifecycle.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.5 Manage the identity and access provisioning lifecycle.md
@@ -167,7 +167,7 @@ An effective Identity and Access Management (IAM) system can minimize the risk o
 
 :bulb: In Windows systems, the "Run as" feature allows a user to execute a program with the permissions of another user, typically an administrator. When a user selects "Run as" and provides the credentials of a user with elevated privileges, the system executes the command under that user's security context. This allows the user to perform tasks that require administrative rights without needing to permanently log in as an administrator.
 
-## 5.5.5 Service accounts managemen ##
+## 5.5.5 Service accounts management ##
 
 Service accounts are specialized accounts used by applications, services, or automated tasks, rather than individual users. These accounts are crucial for system operations, enabling processes like backups, updates, or system maintenance to run smoothly. However, since service accounts typically have broad access to critical systems, they present significant security risks if not properly managed, such as being exploited for privilege escalation or impersonation.
 
