--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -23,7 +23,8 @@ Sometimes, two more principles are added to the CIA triad: Non-repudiation (ensu
 Access control is fundamentally about regulating interactions between entities (subjects) and resources (objects) within an environment that requires security. The goal is to mediate and enforce access permissions to ensure that only authorized subjects can interact with specific objects based on predefined policies and security requirements.
 The following picture recaps some of the concepts above explained and the concepts of labeling and marking taken from Domain 2.
 
-<img width="512" height="273" alt="subjects" src="https://github.com/user-attachments/assets/98993c92-1d48-4af4-aa8e-a9c5edb23e58" />
+<img width="666" height="349" alt="IAAA2" src="https://github.com/user-attachments/assets/d04332b2-2f2b-4705-b94d-74d7b6c4cc4e" />
+
 
 As a security professional you should recognize, assess and protect all the following assets:
 
