Update 5.2 Design identification and authentication strategy (e.g. people, devices and services).md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.2 Design identification and authentication strategy (e.g. people, devices and services).md
@@ -44,6 +44,44 @@ Now that you have clear what groups and roles are, what do you have to do with t
 - Manage Membership: Add or remove users from groups based on their changing roles or assignments.
 - Monitor and Audit: Monitor group and role activity to identify any anomalies or potential security breaches. Conduct regular audits to verify that access privileges are being assigned and used appropriately. This will help you in avoiding any form of privilege creep.
 
+```mermaid 
+flowchart TD
+
+A[1️⃣ Create Groups] --> B[2️⃣ Define Roles]
+B --> C[3️⃣ Assign Permissions to Roles]
+C --> D[4️⃣ Map Users, Groups, and Roles]
+D --> E[5️⃣ Manage Groups and Roles]
+
+%% --- Create Groups ---
+A --> A1[Identify necessary groups based on organizational structure]
+A --> A2[Define attributes/criteria for membership]
+A --> A3[Create groups in the IAM system]
+
+%% --- Define Roles ---
+B --> B1[Identify organizational roles and responsibilities]
+B --> B2[Define permissions required for each role]
+B --> B3[Create roles in the IAM system]
+
+%% --- Assign Permissions ---
+C --> C1[Assign permissions to each role based on responsibility]
+C --> C2[Apply least privilege principle]
+C --> C3[Use granular permissions for job-specific access]
+
+%% --- Map Users, Groups, Roles ---
+D --> D1[Associate users with relevant groups]
+D --> D2[Assign roles to groups instead of single users]
+D --> D3[Ensure consistency between user, group, and role mapping]
+
+%% --- Manage and Review ---
+E --> E1[Regularly review and update groups and roles]
+E --> E2[Add/remove users as roles change]
+E --> E3[Monitor and audit activity to detect anomalies or privilege creep]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+
 ### Open Questions ###
 
 1. What is the difference between a group and a role in identity management?
