Update 6.Q.1 Easy Questions.md

--- a/DOMAIN6: Security Assessment and Testing/6.Q.1 Easy Questions.md
+++ b/DOMAIN6: Security Assessment and Testing/6.Q.1 Easy Questions.md
@@ -112,3 +112,115 @@ B. Awareness of tools doesn’t directly affect scheduling decisions.
 
 ---
 
+6. Your organization has recently acquired a vulnerability scanner with the purpose of detecting security vulnerabilities in computer systems, networks, or applications. Which of the following is not a direct benefit of vulnerability scanning?
+
+A. Pinpoints a specific group of computers for conducting vulnerability analysis.
+B. Detects unauthorized file modifications.
+C. Lists the arrangement of the network and identifies the group of active hosts and related software.
+D. Discovers possible vulnerabilities within the selected group of active hosts.
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: B. Detects unauthorized file modifications.
+
+Explanation:
+Detecting unauthorized file modifications is typically the responsibility of Integrity Checkers, not vulnerability scanners.
+
+Vulnerability scanners are designed to:
+
+Identify network configurations and discover active hosts with associated software.
+
+Pinpoint specific systems for focused analysis.
+
+Detect potential vulnerabilities and verify patch levels.
+
+These tools help maintain system security posture but do not monitor real-time integrity changes.
+
+</details>
+
+---
+
+7. As a Chief Information Security Officer (CISO), it’s your responsibility to ensure that all necessary documentation and approvals are in place before beginning a comprehensive vulnerability test on your organization’s systems. Which of the following documents must you possess before initiating a comprehensive vulnerability test?
+
+A. Written agreement with the authorities
+B. Policies and Procedures
+C. Code of Conduct
+D. Written agreement with the management
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. Written agreement with the management
+
+Explanation:
+A written agreement with management provides official authorization for testing activities.
+It defines the scope, objectives, and permissions of the vulnerability test and ensures accountability and legal coverage.
+
+❌ Wrong Answers:
+
+A. Agreement with authorities: Only required for testing government systems.
+
+B. Policies and Procedures: Offer guidance but not authorization.
+
+C. Code of Conduct: Defines ethics, not permissions.
+
+This document ensures that management formally endorses the test, preventing misunderstandings or unauthorized activity.
+
+</details>
+
+---
+
+8. Your company is working with a third-party service provider to handle critical financial transactions. To ensure that the provider maintains adequate controls and accurate monitoring, you must assess the relevant SOC report. Which of the following SOC reports is most appropriate for verifying continuous financial controls and accuracy over a period of time?
+
+A. SOC 2 Type 2
+B. SOC 2 Type 1
+C. SOC 1 Type 1
+D. SOC 1 Type 2
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. SOC 1 Type 2
+
+Explanation:
+A SOC 1 Type 2 report evaluates the operational effectiveness of financial control processes over time.
+It ensures that the provider’s systems support reliable financial reporting throughout the assessed period.
+
+❌ Wrong Answers:
+
+SOC 1 Type 1: Only reviews design at a single point in time.
+
+SOC 2 Type 1 / Type 2: Assess trust principles (security, privacy, availability) but not financial processes.
+
+SOC 1 Type 2 is essential when ongoing assurance of financial control reliability is required.
+
+</details>
+
+---
+
+9. Your company is planning to conduct a penetration test to evaluate its security posture. As part of the planning phase, you need to determine which activities are typically included in a penetration test. Which of the following is not a standard activity in a penetration test?
+
+A. Personnel security
+B. IT systems
+C. Contract verification
+D. Physical security
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: C. Contract verification
+
+Explanation:
+Contract verification deals with reviewing legal or compliance documentation, not system vulnerabilities.
+Penetration testing focuses on identifying and exploiting weaknesses in systems, applications, or physical security controls.
+
+❌ Wrong Answers:
+
+A. Personnel security: Assessed during social engineering or phishing simulations.
+
+B. IT systems: Core focus of penetration testing.
+
+D. Physical security: Can be tested by attempting to bypass physical barriers.
+
+Penetration testing aims to simulate real-world attacks, not to review administrative paperwork.
+
+</details>
+
+---
