Update 6.1 Design and validate assessment, test, and audit strategy.md

--- a/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
+++ b/DOMAIN6: Security Assessment and Testing/6.1 Design and validate assessment, test, and audit strategy.md
@@ -1,29 +1,47 @@
 ## 6.1 Design and validate assessment, test, and audit strategy ##
 
-:link: This section of Domain 6 is focused on audit design, refer to section [6.5 6.5 Conduct or facilitate security audits](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN6%3A%20Security%20Assessment%20and%20Testing/6.5%20Conduct%20or%20facilitate%20security%20audits.md#650-preface) to better learn how to implement them.
+:link: This section of Domain 6 is focused on audit design, refer to section [6.5 Conduct or facilitate security audits](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN6%3A%20Security%20Assessment%20and%20Testing/6.5%20Conduct%20or%20facilitate%20security%20audits.md#650-preface) to better learn how to implement them.
 
 In previous domains we have learned how to build a secure environment… now it’s time to verify if it actually is secure. Tests, assessments, and audits are the tools security professionals use to uncover vulnerabilities, misconfigurations, and procedural weaknesses before attackers do. Domain 6 teaches how to look under the hood of your security program and answer the big question: “*Are we really protected?*”
 
-**Testing** is like doing a fire drill. Penetration tests (pen tests), vulnerability scans, and security functional tests are about simulating attacks, checking what works, and what doesn’t. These are often technical, hands-on, and actively probe systems to see what breaks.
+- **Testing** is like doing a fire drill. Penetration tests (pen tests), vulnerability scans, and security functional tests are about simulating attacks, checking what works, and what doesn’t. These are often technical, hands-on, and actively probe systems to see what breaks.
 
-**Assessments** are broader and more strategic. They’re not about “hacking the system,” but evaluating the overall posture—how well policies are followed, how risks are identified, and where improvements are needed. These can include risk assessments, security assessments, and gap analyses. They’re the “health checkups” of your security ecosystem.
+- **Assessments** are broader and more strategic. They’re not about “hacking the system,” but evaluating the overall posture—how well policies are followed, how risks are identified, and where improvements are needed. These can include risk assessments, security assessments, and gap analyses. They’re the “health checkups” of your security ecosystem.
 
-**Audits** are even more formal, often tied to compliance and regulations. Whether internal or external, an audit checks if you're actually doing what you say you're doing. Think policies, procedures, logs, and documentation. Auditors follow a structured process to verify controls are in place and functioning—because regulators and stakeholders need proof, not promises.
+- **Audits** are even more formal, often tied to compliance and regulations. Whether internal or external, an audit checks if you're actually doing what you say you're doing. Think policies, procedures, logs, and documentation. Auditors follow a structured process to verify controls are in place and functioning—because regulators and stakeholders need proof, not promises.
 
 :necktie: We don’t secure a system by installing firewalls and crossing out fingers. We need a feedback loop—a cycle of testing, evaluating, and adjusting. Domain 6 is about holding our systems, processes, and people accountable—and building confidence that your defenses are real, not theoretical.
 
-:link: [NIST SP 800-53A Assessing Security and Privacy Controls in Information Systems and Organizations](https://csrc.nist.gov/pubs/sp/800/53/a/r5/final) defines Four Types of Assessment Objects (what can be assessed):
+:link: [NIST SP 800-53A Assessing Security and Privacy Controls in Information Systems and Organizations](https://csrc.nist.gov/pubs/sp/800/53/a/r5/final) defines Four Types of Assessment Objects (*what can be assessed*):
 - Specifications – Documents such as policies, plans, procedures, or system security plans.
 - Mechanisms – Security functions or features (e.g., encryption, access control).
 - Activities – Operations performed by people or systems (e.g., monitoring, backups).
 - Individuals – People performing roles (e.g., security officers, admins).
 
-And Four Components of an Assessment Approach (how to assess):
+And Four Components of an Assessment Approach (*how to assess*):
 - Assessment Object – The target (specifications, mechanisms, activities, individuals).
 - Assessment Method – How you assess (examine, interview, test).
 - Assessment Procedure – The step-by-step guide to performing the assessment.
 - Assessment Result – The output (pass/fail, compliant/non-compliant, findings).
 
+```mermaid
+flowchart TD
+    A[NIST SP 800-53A: Assessing Security and Privacy Controls] --> B[Four Types of Assessment Objects]
+    A --> C[Four Components of an Assessment Approach]
+
+    B --> B1[Specifications - Documents such as policies, plans, procedures, or system security plans]
+    B --> B2[Mechanisms - Security functions or features like encryption or access control]
+    B --> B3[Activities - Operations performed by people or systems such as monitoring or backups]
+    B --> B4[Individuals - People performing roles such as security officers or administrators]
+
+    C --> C1[Assessment Object - The target: specifications, mechanisms, activities, or individuals]
+    C --> C2[Assessment Method - How you assess: examine, interview, or test]
+    C --> C3[Assessment Procedure - The step-by-step guide to performing the assessment]
+    C --> C4[Assessment Result - The output such as pass/fail, compliant/non-compliant, or findings]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 ## 6.1.1 Internal (e.g., within organization control) ##
 
@@ -47,7 +65,7 @@ Examples of what internal audits might review are:
 
 Internal audits are often performed by an internal audit department, risk and compliance teams, or even security personnel who are trained in audit techniques.
 
-One key challenge with internal audits is the potential for conflict of interest. When someone reviews a process they helped design or manage, it’s difficult to be completely objective.
+:necktie: One key challenge with internal audits is the potential for **conflict of interest**. When someone reviews a process they helped design or manage, it’s difficult to be completely objective.
 
 Some examples of conflict include:
 - A sysadmin auditing their own patching practices.
