Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, Star Model, Bell Lapadula).md
@@ -293,9 +293,9 @@ Key Concepts of the Biba Model
 
 The Core Security Rules of the Biba Model are:
 
-1. *No Write Up (Simple Integrity Property).* Users cannot write data at a higher integrity level than their own. Prevents untrusted users from modifying critical data.
+1. *No Write Up (Star Integrity Property).* Users cannot write data at a higher integrity level than their own. Prevents untrusted users from modifying critical data.
 
-2. *No Read Down (Star Integrity Property, -Property).* Users cannot read data at a lower integrity level. Prevents contamination of high-integrity data by unreliable sources.
+2. *No Read Down (Simple Integrity Property, -Property).* Users cannot read data at a lower integrity level. Prevents contamination of high-integrity data by unreliable sources.
 
 Strengths of the model:
 
